log
Fri Apr 22 11:28:33 HSP 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:23: error: 'lower_than_int' undeclared (first use in this function)
     new->lower_than = lower_than_int;
                       ^~~~~~~~~~~~~~
treemap.c:42:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
da4f12b
Fri Apr 22 11:28:43 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
bd6eaf0
Fri Apr 22 11:29:06 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
b423bcb
Fri Apr 22 11:41:16 HSP 2022: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
48ae8bc
Fri Apr 22 11:42:15 HSP 2022: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|7
total_score: 5/70
50b1e1a
Fri Apr 22 11:43:11 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
8c58c4e
Fri Apr 22 11:44:51 HSP 2022: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
749b1a7
